--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^4.4.0",
-    "@tensorflow/tfjs-node": "^4.5.0",
+    "@tensorflow/tfjs-node": "^4.6.0",
     "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
